--- a/css/introduction/intro.css
+++ b/css/introduction/intro.css
@@ -142,8 +142,17 @@
 
 @media (max-width: 480px) {
   .intro {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 12px;
+  }
+
+  .intro-icons {
+    display: flex;
+    gap: 8px;
+  }
+
+  .intro-info::after {
+    display: none;
   }
 
   .intro-info h1 {
@@ -160,15 +169,19 @@
 }
 
 @media (max-width: 380px) {
+  .intro-info {
+    align-items: center;
+  }
+
   .intro-info::after {
     display: none;
   }
   .intro-info h1 {
-    font-size: 1.8rem;
+    font-size: 2.5rem;
   }
 
   .intro-info h2 {
-    font-size: 0.8rem;
+    font-size: 1rem;
   }
 
   .intro-info h2::before {
@@ -176,14 +189,22 @@
   }
 
   .intro-info p {
-    font-size: 0.7rem;
-    min-width: 18ch;
+    font-size: 0.8rem;
+    align-self: center;
+  }
+
+  .intro-info a {
+    align-self: center;
   }
 
   .pink-btn {
     margin-top: 18px;
     font-size: 0.8rem;
     padding: 8px 16px;
+  }
+
+  .intro-icons {
+    justify-content: center;
   }
 
   .intro-icons img {
