--- a/css/introduction/intro.css
+++ b/css/introduction/intro.css
@@ -169,6 +169,10 @@
 }
 
 @media (max-width: 380px) {
+  .intro {
+    grid-template-columns: minmax(0, 300px);
+  }
+
   .intro-info {
     align-items: center;
   }
