--- a/css/introduction/habilities.css
+++ b/css/introduction/habilities.css
@@ -2,12 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 100px;
+  margin-top: 120px;
 }
 
 .habilities-skills {
   background-color: var(--cor-0);
   margin-top: 64px;
+
   width: 30vw;
   border-radius: 8px;
   padding: 20px 40px;
@@ -40,4 +41,15 @@
 .habilities-skills span {
   margin-left: 20px;
   font-size: 1.1rem;
+}
+
+@media (max-width: 380px) {
+  .habilities-skills {
+    margin-top: 32px;
+    width: 40vw;
+  }
+
+  .habilities-skills li {
+    margin-bottom: 16px;
+  }
 }
